# pysqueeze

./: .gitignore  .pypirc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pysqueeze/: __init__.py  cli.py  compressor.py
tests/: conftest.py  test_cli.py  test_compressor.py
